[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/item/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sound/booing-crowd.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/loosing.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/ui/Fade.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/item/StickyNote.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/font_counter.tres" type="DynamicFont" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Loose:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Booing:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "loose"
length = 5.5
tracks/0/type = "value"
tracks/0/path = NodePath("Loose:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Booing:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CanvasLayer/Control/Fade")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "fade_out"
} ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Buzzer" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
position = Vector2( 400, 585 )

[node name="Sticky" parent="Buzzer" instance=ExtResource( 6 )]
unique_name_in_owner = true
position = Vector2( -50, -100 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 790.0
margin_bottom = 790.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer"]
margin_right = 780.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
custom_constants/margin_top = 40

[node name="CountDown" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
margin_top = 40.0
margin_right = 780.0
margin_bottom = 72.0
size_flags_vertical = 2
size_flags_stretch_ratio = 0.4
custom_fonts/font = ExtResource( 7 )
text = "count-down"
align = 1

[node name="Dialog" type="RichTextLabel" parent="CanvasLayer/Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_top = 197.0
margin_right = 780.0
margin_bottom = 679.0
mouse_filter = 2
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "dialog"
text = "dialog"

[node name="Eptwalabha" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 765.0
margin_right = 780.0
margin_bottom = 780.0
size_flags_horizontal = 3
size_flags_vertical = 10
size_flags_stretch_ratio = 0.2
text = "ld51 @eptwalabha"
align = 1
valign = 1

[node name="Fade" parent="CanvasLayer/Control" instance=ExtResource( 5 )]
unique_name_in_owner = true
duration = 1.0

[node name="Loose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Booing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/loose = SubResource( 2 )

[connection signal="clicked" from="Buzzer" to="." method="_on_Button_clicked"]
[connection signal="finished" from="CanvasLayer/Control/Fade" to="." method="_on_Fade_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
